--- a/EcommLOGIN.html
+++ b/EcommLOGIN.html
@@ -34,7 +34,7 @@
 
     <nav class="navbar main-navbar">
         <div class="container-fluid px-4 d-flex justify-content-between align-items-center">
-            <a href="eComm.html" class="navbar-brand">
+            <a href="index.html" class="navbar-brand">
                 <div style="display: flex; align-items: center; gap: 10px;">
                     <img src="assets/LOGO.png" alt="Book Icon" style="height: 120px;">
                 </div>
@@ -104,7 +104,7 @@
                 localStorage.setItem('isLoggedIn', 'true');
                 
                 alert("Login Successful! Welcome " + userData.name);
-                window.location.href = "eComm.html";
+                window.location.href = "index.html";
 
             } else {
                 alert("Invalid Email or Password. Please try again.");
@@ -112,4 +112,5 @@
         });
     </script>
 </body>
+
 </html>
