--- a/Cart.html
+++ b/Cart.html
@@ -57,7 +57,7 @@
   <!--TOP BAR-->
   <div class="top-bar">
     <div class="container-fluid d-flex justify-content-end gap-4 px-4">
-      <a href="eComm.html">HOME</a>
+      <a href="index.html">HOME</a>
       <a href="#">ABOUT</a>
       <a href="#">ORDERS</a>
       <a href="#">HELP</a>
@@ -67,7 +67,7 @@
   <!--NAVBAR-->
   <nav class="navbar main-navbar">
     <div class="container-fluid d-flex align-items-center px-4 position-relative">
-      <a href="eComm.html" class="navbar-brand">
+      <a href="index.html" class="navbar-brand">
         <img src="assets/LOGO.png" alt="Logo" class="logo-img">
       </a>
       
@@ -86,7 +86,7 @@
     <div id="empty-cart" class="empty-state">
         <div class="empty-title">YOUR CART IS EMPTY</div>
         <p style="color: #666;">There are currently no items in your Shopping Cart.</p>
-        <a href="eComm.html" class="btn-continue">CONTINUE SHOPPING</a>
+        <a href="indexl" class="btn-continue">CONTINUE SHOPPING</a>
     </div>
 
     <div id="filled-cart" class="row">
@@ -196,4 +196,5 @@
   </script>
 
 </body>
+
 </html>
