--- a/order.html
+++ b/order.html
@@ -711,7 +711,7 @@ button { outline: none; }
         <!-- IMAGE + TEXT -->
         <div class="row align-items-center mt-4">
           <div class="col-md-6">
-            <img src="assets/LITERARY/No Longer Human.jpg" class="img-fluid rounded">
+            <img src="assets/ABOUT SECTION IMAGE.jpg" class="img-fluid rounded">
           </div>
 
           <div class="col-md-6">
@@ -966,4 +966,5 @@ button { outline: none; }
 </script>
 
 </body>
+
 </html>
