--- a/FAQ.html
+++ b/FAQ.html
@@ -397,7 +397,7 @@ Once your order is successfully placed, you’ll receive an order confirmation e
         <div class="row align-items-center mt-4">
 
           <div class="col-md-6">
-            <img src="about1.jpg" class="img-fluid rounded">
+            <img src="assets/ABOUT SECTION IMAGE.jpg" class="img-fluid rounded">
           </div>
 
           <div class="col-md-6">
@@ -551,5 +551,6 @@ Once your order is successfully placed, you’ll receive an order confirmation e
   </script>
 
 </body>
+
 
 </html>
