--- a/folkliterature_showcase.html
+++ b/folkliterature_showcase.html
@@ -642,7 +642,7 @@
 
             <!--Product Card 9-->
             <div class="col custom-col">
-              <a href="#">]<img src="assets/FOLK LITERATURE/thr homeric hymns.jpg" alt="Book Cover" class="book-card-placeholder"></a>
+              <a href="#"><img src="assets/FOLK LITERATURE/thr homeric hymns.jpg" alt="Book Cover" class="book-card-placeholder"></a>
               <h5 class="fw-bold mb-0">The Homeric Hymns</h5>
               <small class="text-muted">Homer, Peter McDonald</small>
               <div class="text-muted" style="font-size: 0.8rem;">STANDARD PRICE</div>
@@ -827,4 +827,5 @@
 
 
 </body>
+
 </html>
