--- a/PaymentMethods.html
+++ b/PaymentMethods.html
@@ -216,8 +216,8 @@
   <!-- SUB HEADER -->
   <div class="container mt-4 mb-4">
     <div class="d-flex justify-content-between align-items-center">
-      <a href="eComm.html" class="sub-nav-link">BACK</a>
-      <a href="eComm.html" class="sub-nav-link">CONTINUE SHOPPING</a>
+      <a href="index.html" class="sub-nav-link">BACK</a>
+      <a href="index.html" class="sub-nav-link">CONTINUE SHOPPING</a>
     </div>
   </div>
 
@@ -457,10 +457,11 @@
     document.getElementById('logoutBtn').addEventListener('click', function() {
         if(confirm("Are you sure you want to Log Out?")) {
             localStorage.setItem('isLoggedIn', 'false');
-            window.location.href = "eComm.html"; 
+            window.location.href = "index.html"; 
         }
     });
   </script>
 
 </body>
+
 </html>
