--- a/Cart.html
+++ b/Cart.html
@@ -86,7 +86,7 @@
     <div id="empty-cart" class="empty-state">
         <div class="empty-title">YOUR CART IS EMPTY</div>
         <p style="color: #666;">There are currently no items in your Shopping Cart.</p>
-        <a href="indexl" class="btn-continue">CONTINUE SHOPPING</a>
+        <a href="index.html" class="btn-continue">CONTINUE SHOPPING</a>
     </div>
 
     <div id="filled-cart" class="row">
@@ -198,3 +198,4 @@
 </body>
 
 </html>
+
