--- a/Wishlist.html
+++ b/Wishlist.html
@@ -73,7 +73,7 @@
     <div id="empty-wishlist" class="empty-state">
         <h2 style="font-weight: 900;">YOUR WISHLIST IS EMPTY</h2>
         <p style="color: #666;">Save items you love here for later.</p>
-        <a href="eComm.html" class="btn-continue">BROWSE BOOKS</a>
+        <a href="index.html" class="btn-continue">BROWSE BOOKS</a>
     </div>
 
     <!--FILLED-->
@@ -150,4 +150,5 @@
   </script>
 
 </body>
+
 </html>
