--- a/Profile.html
+++ b/Profile.html
@@ -143,7 +143,7 @@
   <nav class="navbar main-navbar shadow">
     <div class="container-fluid d-flex align-items-center px-4">
       <!--Logo-->
-      <a href="eComm.html" class="navbar-brand">
+      <a href="index.html" class="navbar-brand">
         <img src="assets/LOGO.png" alt="Logo" class="logo-img">
       </a>
       <!--Search-->
@@ -162,8 +162,8 @@
   <!--SUB HEADER-->
   <div class="container mt-4 mb-4">
     <div class="d-flex justify-content-between align-items-center">
-      <a href="eComm.html" class="sub-nav-link">BACK</a>
-      <a href="eComm.html" class="sub-nav-link">CONTINUE SHOPPING</a>
+      <a href="index.html" class="sub-nav-link">BACK</a>
+      <a href="index.html" class="sub-nav-link">CONTINUE SHOPPING</a>
     </div>
   </div>
 
@@ -299,4 +299,5 @@
     });
   </script>
 </body>
+
 </html>
